--- a/NEWSTC/src/app/app.component.html
+++ b/NEWSTC/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-loading-bar [includeSpinner]="false" [height]="'5px'"></ngx-loading-bar>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="">Praveen NEWS</a>
